# PixelMaestro

./: .gitignore  .gitmodules  CHANGELOG.md  Colors.cpp  Colors.h  Colors.h.gch  Doxyfile  Grid.cpp  Grid.h  Line.cpp  Line.h  Maestro.cpp  Maestro.h  Maestro.h.gch  Pixel.cpp  Pixel.h  Pixel.h.gch  README.md  Section.cpp  Section.h  Section.h.gch  Show.cpp  Show.h  library.json  library.properties  platformio.ini
gui/: CMakeLists.txt  PixelMaestro_QT.pro  PixelMaestro_Studio.pro  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
gui/controller/: canvascontroller.cpp  canvascontroller.h  cueinterpreter.cpp  cueinterpreter.h  maestrocontroller.cpp  maestrocontroller.h  palettecontroller.cpp  palettecontroller.h  sectioncontroller.cpp  sectioncontroller.h  showcontroller.cpp  showcontroller.h
gui/demo/: PatternDemo.cpp  PatternDemo.h  animatedcanvasdemo.cpp  animatedcanvasdemo.h  blinkdemo.cpp  blinkdemo.h  canvasdemo.cpp  canvasdemo.h  colorcanvasdemo.cpp  colorcanvasdemo.h  commanddemo.cpp  commanddemo.h  cuedemo.cpp  cuedemo.h  patterndemo.cpp  patterndemo.h  presetdemo.cpp  presetdemo.h  showdemo.cpp  showdemo.h
gui/demos/: Logo.cpp  Orientation.cpp  Orientation.h  ShowDemo.h
gui/drawingarea/: canvasdrawingarea.cpp  canvasdrawingarea.h  maestrodrawingarea.cpp  maestrodrawingarea.h  simpledrawingarea.cpp  simpledrawingarea.h
gui/gtk/: README.md
gui/include/: PixelGrid.h  PixelGridDrawingArea.h  SimplePixelGridDrawingArea.h
gui/qt/: PixelMaestro_QT.pro  main.cpp  mainwindow.cpp  mainwindow.ui
tests/: .gitignore  CMakeLists.txt  ColorsTest.cpp  ColorsTest.h  PixelTest.cpp  PixelTest.h  README.md
(+1102 files in other folders)
